[tool.poetry]
name = "uber-pickups"
version = "0.1.0"
description = "example using streamlit with data from uber"
authors = ["imbrunoagc <brunoaugusto864@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
